--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="bunny">
-        <img src="/bunny.png" alt="bunny image">
+        <img src="bunny.png" alt="bunny image">
     </div>
 </body>
 
